<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="trending_today">Trending Today</string>
    <string name="runtime">%d Minutes</string>
    <string name="youtube_id">%s</string>
    <string name="search">Search</string>
    <string name="no_results_found">No results found.</string>
    <string name="what_do_you_want_to_watch">What do you want to watch?</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now playing</string>
    <string name="detail">Detail</string>
    <string name="about_movie">About Movie</string>
    <string name="reviews">Reviews</string>
    <string name="cast">Cast</string>
    <string name="watch_list">Watch list</string>
    <string name="bookmarked_success">Bookmarked successfully</string>
    <string name="removed_bookmark_success">Removed bookmark successfully</string>
    <string name="trailer_not_found">The trailer for the movie could not be found.</string>
    <string name="no_genre">No genre</string>
    <string name="movify">MOVIFY</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">Movify is the next gen movie recomendation system</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login With google</string>
    <string name="welcome_back">Welcome Back!!!</string>
    <string name="username_email">username/email</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="movie_card_trasition">movie_card_transition_%1$d</string>
</resources>