<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_navy_blue"
        app:layoutDescription="@xml/fragment_first_scene"
        tools:context=".screens.first.FirstFragment">

        <ImageView
            android:id="@+id/ivPoster"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_movie_splash"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_gradient"
            app:layout_constraintBottom_toBottomOf="@+id/ivPoster"
            app:layout_constraintTop_toTopOf="@id/ivPoster" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLogoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/movify"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="@id/ivLogo"
            app:layout_constraintStart_toStartOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="@string/welcome"
            android:textColor="@color/fresh_blue"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

        <TextView
            android:id="@+id/tvWelcomeDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome_description"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_create_account"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/dark_navy_blue"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/fresh_blue"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

        <View
            android:id="@+id/vLineLeft"
            android:layout_width="116dp"
            android:layout_height="3dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tvOr"
            app:layout_constraintEnd_toStartOf="@+id/tvOr"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toTopOf="@id/tvOr" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/vLineLeft"
            app:layout_constraintEnd_toStartOf="@+id/vLineRight"
            app:layout_constraintStart_toEndOf="@+id/vLineLeft"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <View
            android:id="@+id/vLineRight"
            android:layout_width="116dp"
            android:layout_height="3dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvOr"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvOr"
            app:layout_constraintTop_toTopOf="@+id/tvOr" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="76dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="64dp" />

        <TextView
            android:id="@+id/btnGoogleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_create_account"
            android:drawablePadding="36dp"
            android:gravity="center_vertical"
            android:paddingVertical="12dp"
            android:paddingStart="28dp"
            android:text="@string/login_with_google"
            android:textColor="@color/dark_navy_blue"
            app:drawableStartCompat="@drawable/ic_google"
            app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
            app:layout_constraintStart_toStartOf="@+id/leftGuideline"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>